Fix rotation of the truncation arrow.

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,5 @@
 .csic-collapsible.csic-expanded > a.csic-arrow {
-    transform: rotate(0deg);
+    transform: rotate(0deg) translate(-2px, 6px);
 }
 
 .csic-translation-status-wrapper {
